--- a/pom.xml
+++ b/pom.xml
@@ -60,13 +60,13 @@
 		<dependency>
 			<groupId>net.sf.saxon</groupId>
 			<artifactId>Saxon-HE</artifactId>
-			<version>9.4</version>
+			<version>9.6.0-1</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.opensaml</groupId>
 			<artifactId>opensaml</artifactId>
-			<version>2.5.3</version>
+			<version>2.6.4</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>log4j-over-slf4j</artifactId>
@@ -109,20 +109,7 @@
 			<artifactId>opensaml</artifactId>
 			<classifier>tests</classifier>
 			<scope>test</scope>
-			<version>2.5.3</version>
-		</dependency>
-
-		<dependency>
-			<groupId>gov.nist.toolkit</groupId>
-			<version>v2-maven-alpha</version>
-			<artifactId>soapClientAPI</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>gov.nist.toolkit</groupId>
-			<version>v2-maven-alpha</version>
-			<artifactId>axis2SoapClient</artifactId>
-			<scope>test</scope>
+			<version>2.6.4</version>
 		</dependency>
 
 
