--- a/pom.xml
+++ b/pom.xml
@@ -3,45 +3,9 @@
 	xmlns="http://maven.apache.org/POM/4.0.0">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>gov.nist.toolkit</groupId>
-	<artifactId>toolkit2</artifactId>
-	<version>wsseTool</version>
+	<artifactId>saml-lib</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
 
-
-	<!-- <parent>
-		<groupId>gov.nist.toolkit</groupId>
-		<artifactId>toolkit2</artifactId>
-		<version>v2-maven-alpha</version>
-	</parent> -->
-
-	<distributionManagement>
-		<repository>
-			<id>releases</id>
-			<name>Internal Releases</name>
-			<url>http://vm-070.nist.gov:8081/nexus/content/repositories/releases</url>
-		</repository>
-		<snapshotRepository>
-			<id>snapshots</id>
-			<name>Internal Snapshots</name>
-			<url>http://vm-070.nist.gov:8081/nexus/content/repositories/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>
-
-
-	<repositories>
-		<!-- <repository>
-			<id>shibboleth</id>
-			<url>https://build.shibboleth.net/nexus/content/repositories/releases/</url>
-		</repository> -->
-		<!-- <repository>
-			<id>maven</id>
-			<url>http://repo1.maven.org/maven/</url>
-		</repository>
-		<repository>
-			<id>internal</id>
-			<url>http://vm-070.nist.gov:8081/nexus/content/repositories/releases/</url>
-		</repository> -->
-		
-	</repositories>
 
 
 	<dependencies>
@@ -100,9 +64,6 @@
 			<artifactId>commons-validator</artifactId>
 			<version>1.4.0</version>
 		</dependency>
-
-		<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-simple</artifactId> 
-			<version>1.7.5</version> <optional>true</optional> </dependency> -->
 
 		<dependency>
 			<groupId>org.opensaml</groupId>
